# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hooks/: check_aws_profile.py  setup.cfg
