[metadata]
name = check-aws-profile
description = Detect AWS profiles in Terraform scripts and compare with YAML file
version = 0.1.0
author = Ruslan Sakal
author_email = ruslan.sakal@gmail.com
license = MIT
url = https://tiagat.dev

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-aws-profile = check_aws_profile.main:main
